@@ -301,3 +301,6 @@
 	in 'rivendell-producer.nsi.in'.
 2017-05-10 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.6.5.
+2017-06-26 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed bugs that caused 'FADEUP_GAIN' and 'FADEDOWN_GAIN' parameter
+	values to fail to be preserved when editing a log.
